--- a/index.html
+++ b/index.html
@@ -1,11 +1,3 @@
-<!--
- * @Author: 枭磔
- * @Date: 2020-12-23 14:45:47
- * @LastEditors: 枭磔
- * @LastEditTime: 2020-12-23 15:01:22
- * @Description:  ∂
- * @copyright: Copyright @ 2019 Hangzhou DtDream Technology Co.,Ltd. All rights reserved.
--->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -15,5 +7,8 @@
 </head>
 <body>
     <h4 class="a">ewe</h4>
+    <div class="box box1"></div>
+    <div class="box box2"></div>
+    <div class="box box3"></div>
 </body>
 </html>
